@@ -1,6 +1,4 @@
 """Interface to the Expat non-validating XML parser."""
-__version__ = '$Revision$'
-
 import sys
 
 from pyexpat import *
